# fragile

./: --check  --dry-run  --in-place  .codecov.yml  .cookiecutterrc  .coveragerc  .gitignore  .mcp.json  .pre-commit-config.yaml  .travis.yml  01_convergence.aux  01_convergence.toc  03_lattice_qft.aux  03_lattice_qft.out  03_lattice_qft.toc  17_GEOMETRIC_GAS_IMPLEMENTATION_SUMMARY.md  4103  AGENTS.md  ATARI_CLI_QUICKSTART.md  ATARI_DASHBOARD_IMPLEMENTATION.md  ATARI_DASHBOARD_QUICKSTART.md  ATARI_DASHBOARD_README.md  ATARI_TEST_QUICK_REFERENCE.md  ATARI_WSL_QUICKSTART.md  BACKWARD_CROSS_REFERENCE_SUMMARY.md  BACKWARD_REFERENCE_ENRICHMENT_REPORT_03.md  BACKWARD_REF_ANALYSIS_01.md  BACKWARD_REF_ANALYSIS_02.md  BACKWARD_REF_REPORT_01.md  BAKRY_EMERY_PROOF_STRENGTHENING_SUMMARY.md  BEST_PRACTICES_PARAM.md  BIJECTION_VIA_STATISTICS.md  BOUNDARY_CONTRACTION_CORRECTIONS_SUMMARY.md  BOUNDED_DENSITY_PROOF_STATUS.md  CAUSAL_SETS_EXTRACTED.md  CHANGES_SUMMARY.md  CHAPTER_07_REVIEW_SUMMARY.md  CLAUDE.md  CLI_IMPLEMENTATION_SUMMARY.md  COMPONENT_EDGE_DENSITY_LEMMA_COMPLETE.md  (+369 more)
.claude/: PARALLEL_AGENTS.md  SLASH_COMMANDS.md
.codex/: config.toml
.gemini/: settings.json
.ipynb_checkpoints/: debug-checkpoint.ipynb  faiv2-checkpoint.ipynb  montezuma-checkpoint.ipynb  tropes-checkpoint.ipynb
algorithm/: 00_PROJECT_SUMMARY_AND_PROOF_MAP.md  01_fragile_gas_framework.md  02_euclidean_gas.md  03_cloning.md  04_wasserstein_contraction.md  04_wasserstein_contraction_CLUSTER.md  04_wasserstein_contraction_CLUSTER_REWRITE.md  05_convergence.md  05_kinetic_contraction.md  06_convergence.md  07_adaptative_gas.md  08_propagation_chaos.md  09_kl_convergence.md  09_symmetries_adaptive_gas.md  10_kl_convergence.md  10_qsd_exchangeability_theory.md  11_adaptative_gas.md  11_convergence_mean_field.md  12_adaptive_gas_lsi_proof.md  12_symmetries_adaptive_gas.md  13_adaptative_gas_c3_regularity.md  14_adaptative_gas_c4_regularity.md  15_adaptive_gas_lsi_proof.md  16_convergence_mean_field.md  A1_qsd_exchangeability_theory.md  IMPLEMENTATION_COMPLETE.md  REVIEW_SUMMARY_AND_PATH_FORWARD.md  c3_adaptative_gas.md  c4_adaptative_gas.md  c4_adaptative_gas_new_intro.md
combined_registry/: index.json
config/: montezuma.yaml
configs/: config.yaml
data/: fractal_set_growth_demo.html
deprecated/: 00_FINAL_STATUS_SUMMARY.md  00_W2_PROOF_COMPLETION_SUMMARY.md  10_A_lemma5.2_revised.md  10_C_lemma5.2_meanfield.md  10_D_step3_cloning_bounds.md  10_E_lemma5.2_corrected.md  10_F_status_summary.md  10_G_gap2_fitness_potential.md  10_H_gap3_entropy_variance.md  10_L_lemma5.2_publication_ready.md  13_stage1_kinetic_dominance.md  README.md
discussions/: 18_fermions_from_directed_cloning.md  18_speculation_harvest_feasibility.md  18_wasserstein_month1_kinetic.md  19_speculation_investigation_plan.md  20_gemini_review_poisson_sprinkling.md  21_gemini_review_holography.md  22_gemini_review_qcd.md  23_gemini_reviews_consolidated.md  24_gemini_review_directed_cloning.md  25_lessons_from_gemini_reviews.md  26_fermions_algorithmic_antisymmetry_validated.md  27_faddeev_popov_ghosts_from_cloning.md  28_wilson_loops_from_ig_edges.md  29_gemini_review_faddeev_popov_ghosts.md  30_gemini_review_wilson_loops_ig_edges.md  31_gemini_reviews_ch27_ch28_summary.md  32_wilson_loops_single_root_corrected.md  33_geometric_area_from_fractal_set.md  34_area_problem_resolution_summary.md  35_intrinsic_vs_extrinsic_area.md  GEMINI_FINAL_REFINEMENTS_V2.md
docker/: Dockerfile.atari-cli  Dockerfile.atari-dashboard
docs/: --in-place  CHAPTER_07_SECOND_REVIEW_REPORT.md  CITATION.cff  CLAUDE.md  DEPRECATION_GUIDE.md  LEAN_EMULATION_GUIDE.md  MATH_GRAPH_SUMMARY.md  MCP_DSPY_INTEGRATION.md  Makefile  PYDANTIC_VALIDATION_DEEP_DIVE.md  QFT_DASHBOARD_USAGE.md  REFACTORING_COMPLETE.md  REFACTORING_STATUS.md  _config.yml  _toc.yml  add_subsection_labels.py  build_prompt_downloads.py  collect_prf_directives.py  conclusions.md  conf.py  convert_section_refs.py  cross_reference_enrichment_report.md  cross_reference_improvement_report.md  fix_transitions.py  fragile-index.md  fragile-index.md.backup  fragile_proof_types.py  glossary.md  index.md  intro.md  iteration_feedback_implementation.md  manual_refine_logging.md  math_graph.json  myst.yml  package-lock.json  package.json  reference.md  references.bib  requirements.txt
docsrc/: requirements-readthedocs.txt
examples/: 02_function_minimization.ipynb  BENCHMARK_SELECTOR.md  GAS_CONFIG_BENCHMARKS.md  README.md  article_workflow_example.py  benchmark_selector_demo.py  complete_integration_example.py  complete_workflow.py  convergence_bounds_example.py  extract_then_enrich_pipeline.py  fractal_set_demo.py  fractal_set_growth_demo.py  fractal_set_simple_demo.py  gas_config_with_benchmarks_demo.py  graph_analysis.py  hydra_proof_sketcher.py  manual_refine_logging_demo.py  mixture_of_gaussians_example.py  mixture_of_gaussians_simple.py  pipeline_example.py  proof_system_example.py  registry_test.py  relationship_test.py  review_workflow_example.py  run_parameter_extraction.py  run_parameter_extraction_hybrid.py  run_parameter_extraction_simple.py  storage_example.py  symbolic_geometry_demo.py  sympy_integration_example.py  test_iteration_feedback.py  text_location_enrichment_example.py  theorem_proof_workflow.py
experiments/: 03_exponential_convergence_to_qsd.ipynb  03_exponential_convergence_to_qsd_old.ipynb  04_two_swarm_convergence.ipynb  05_euclidean_gas_convergence.ipynb  05_two_swarm_holoviews.ipynb  06_interactive_euclidean_gas.ipynb  07_emergent_manifold_visualization.ipynb  BOUNDARY_HANDLING.md  EXPERIMENT_FRAMEWORK.md  FRACTAL_SET_VISUALIZATION_GUIDE.md  adaptive_gas_convergence.ipynb  adaptive_gas_demo.ipynb  atari_gas.ipynb  convergence.ipynb  debug.ipynb  debug_lyapunov_no_clustering.py  demo.ipynb  fractal_set_visualization.ipynb  gas_viz_demo.ipynb  keystone_principle.ipynb  pacman_interactive.ipynb  ricci_gas_2d.ipynb  ricci_gas_boundaries_demo.py  ricci_gas_cloning_demo.py  ricci_gas_experiments.py  ricci_gas_visualization.ipynb  test_notebook_03.py  test_notebook_05.py
src/: dataviz.py
(+6875 files in other folders)
