[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fragile"
description = "FractalAI kungfu"
readme = "README.md"
requires-python = "==3.10.*"
license = { file = "LICENSE" }
# keywords for easier look-up on PyPI
keywords = [] # ToDo: Modify according to your needs!
authors = [
    { name = "Guillem Duran Ballester", email = "guillem@fragile.tech" },
]
maintainers = [
    { name = "Guillem Duran Ballester", email = "guillem@fragile.tech" },
]
# options under https://pypi.org/classifiers/
classifiers = [
        # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: Unix",
        "Operating System :: POSIX",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        # uncomment if you test on these interpreters:
        # "Programming Language :: Python :: Implementation :: IronPython",
        # "Programming Language :: Python :: Implementation :: Jython",
        # "Programming Language :: Python :: Implementation :: Stackless",
        "Topic :: Utilities",
    ]
dynamic = ["version"]
dependencies = [
    "flogging",
    "click",
    "numpy",
    "numba>=0.62.1",
    "einops",
    "hydraclick",
    "panel",
    "holoviews",
    "bokeh",
    "pillow-simd",
    "shaolin",
    "pip>=24.2",
    "hvplot>=0.11.0",
    "streamz>=0.6.4",
    "plangym[atari]>=0.1.27",
    "ray>=2.37.0",
    "jupyter",
    "notebook",
    "torch>=2.7.1",
    "pydantic>=2.12.0",
    "jupyter-bokeh>=4.0.5",
    "plotly>=6.3.1",
    "sympy>=1.14.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "kaleido>=1.1.0",
    "ipywidgets-bokeh>=1.6.0",
    "networkx>=3.4.2",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "manim>=0.18.1",
    "repomix>=0.3.4",
    "dspy-ai>=3.0.3",
    "python-dotenv>=1.0.0",
    "tqdm>=4.67.1",
    "dspy[mcp]>=3.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
]
[project.urls]
# important URLs for this project
Documentation = "https://fragile.readthedocs.io/"
Changelog = "https://fragile.readthedocs.io/en/latest/changelog.html"
Tracker = "https://github.com/FragileTech/fragile/issues"
[project.scripts]
fragile = "fragile.__main__:run"
mathster = "mathster.cli:cli"

[project.optional-dependencies]
docs = [
    "autoapi",
    "jupyter-book",
    "sphinx>=7.0.0",
    "linkify-it-py",
    "myst-parser",
    "myst-nb",
    "ruyaml",
    "sphinx-autoapi",
    "pydata-sphinx-theme",
    "sphinx-autodoc2",
    "sphinxcontrib-mermaid",
    "sphinx_book_theme",
    "sphinx_rtd_theme",
    "jupyter-cache",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinxext-opengraph",
    "sphinxcontrib-bibtex",
    "sphinx-inline-tabs",
    "sphinx-design",
    "sphinx-proof",
    "sphinx-math-dollar",
    "sphinxcontrib-mermaid>=1.0.0",
]
[tool.hatch.metadata]
# direct dependency references, e.g `pip @ git+https://github.com/pypa/pip.git@master`
allow-direct-references = true

[tool.hatch.version]
path = "src/fragile/version.py"

[tool.hatch.build]
packages = [
    "src/fragile",
    "src/mathster",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]

[tool.ruff]
target-version = "py310"
preview = true
line-length = 99
include = ["*.py", "*.pyi", "**/pyproject.toml"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".idea",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "output",
    "venv",
    "experimental",
    ".pytest_cache",
    "**/.ipynb_checkpoints/**",
    "**/proto/**",
    "data",
    "config",
    "docs/conf.py",  # Autogenerated by jupyter-book
]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    "ARG", # Checks for unused function arguments.
    "C4", # Rules from flake8-comprehensions, for unnecessary comprehensions.
    "E", # Pycodestyle error rules.
    "EM", # Rules from flake8-errmsg, for raw strings in exceptions.
    "F", # Pyflakes rules, for detecting errors in Python programs.
    "FBT", # Rules from flake8-boolean-trap, for boolean positional arguments.
    "FLY", # Rules from flynt, for converting string formatting to f-strings.
    "FIX", # Rules from flake8-fixme, for flagging FIXME, TODO, etc. comments.
    "FURB", # Rules from refurb, for refurbishing code with better practices.
    "N", # Rules from pep8-naming, for enforcing naming conventions.
    "INP", # Rules from flake8-no-pep420, for implicit namespace packages.
    "ISC", # Rules from flake8-implicit-str-concat, for implicit string concatenation.
    "PERF", # Rules from Perflint, for performance-related issues.
    "PIE", # Rules from flake8-pie, for various simplifications and improvements.
    "PL", # Pylint rules.
    "RET", # Rules from flake8-return, for checking return statements.
    "RUF", # Ruff-specific rules.
    "S", # Rules from flake8-bandit, for finding security issues.
    "T10", # Rules from flake8-debugger, for finding debugger imports.
    "TD", # Rules from flake8-todos, for checking TODO comments.
    "T20", # Rules from flake8-print, for finding print statements.
    "UP", # Rules from pyupgrade, for upgrading syntax to newer versions.
    "YTT", # Rules from flake8-2020, for detecting deprecated Python 2 idioms.
    "W", # Pycodestyle warning rules.
    "I", # isort rules, for sorting imports.
]
ignore = [
    "ISC001", # Implicit string concatenation is not allowed. This is required for the formatter to work.
    "FIX002", # Line contains TODO, consider resolving the issue.
    "TD001", # Invalid TODO tag.
    "TD002", # Missing author in TODO.
    "FIX001", # Line contains FIXME, consider resolving the issue.
    "TD003", # Missing issue link for this TODO.
    "FIX004", # Line contains HACK, consider resolving the issue.
    "PLR0913", # Too many arguments in function definition.
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`.
    "PTH123", # `open()` should be replaced by `Path.open()`.
    "PLR6301", # Method could be a function, class method, or static method.
    "PLR0917", # Too many positional arguments.
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes.
    "S403", # `pickle`, `cPickle`, `dill`, and `shelve` modules are possibly insecure.
    "PLR0914", # Too many local variables.
    "PLR0915", # Too many statements.
    "T201", # `print` found.
    "D", # Disable all docstring rules until the project is in shape.
    "S301", # Using pickle is a potential security risk.
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition
    "N803", # Argument name should be lowercase.
    "N806", # Variable in function should be lowercase
    "FURB103", # `open` and `write` should be replaced by `Path.write_text()`
    "RUF003", # Comment contains ambiguous Unicode character
    #"UP046", # uses `Generic` subclass instead of type parameters
    "N802", # Function name should be lowercase.
    "RUF001", # String contains ambiguous Unicode character
    "RUF002", # Docstring contains ambiguous Unicode character
    "PLR2004", # Magic value used in comparison.
    "EM102", # Exception must not use an f-string literal, assign to variable first
    "PTH111", # `os.path.expanduser()` should be replaced by `Path.expanduser()`
    "UP035", # `typing.Dict` is deprecated, use `dict` instead
    "PLW2901", # `for` loop variable overwritten by assignment target
    "S318", # Using xml to parse untrusted data is known to be vulnerable
    "S404", # `subprocess` module is possibly insecure
    "S408", # `xml.dom.minidom` is known to be vulnerable
    "S405", # `xml.etree` is known to be vulnerable
    "S607", # Starting a process with a partial executable path
    "S603", # `subprocess` call - check for execution of untrusted input
    "S608", # Possible SQL injection vector through string-based query construction
    "E902", # `IOError` and `OSError` have been merged
    "PLW3201", # Bad or misspelled dunder method name
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"
scipy = "sp"
holoviews = "hv"
panel = "pn"
polars = "pl"
"polars.selectors" = "cs"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "E402", # Module level import not at top of file
    "F401", # Imported but unused
]
"cli.py" = [
    "PLC0415", # Import should be at module level
    "D205", # 1 blank line required between summary and description
    "D400", # First line should end with period
    "D415", # First line should end with period question mark or exclamation mark
]
"**/docs/**" = [
    "INP001", # File is part of an implicit namespace package
    "PTH100", # `os.path.abspath()` should be replaced by `Path.resolve()`
]
"**/{tests,docs,tools}/*" = [
    "E402", # Module level import not at top of file
    "F401", # Imported but unused
    "F811", # Redefined while unused
    "D", # All docstring rules
    "S101", # Use of `assert` detected
    "PLR2004", # Magic value used in comparison
    "PLR0904", # Too many public methods
    "S105", # Possible hardcoded password
    "PLW1514", # `open` without explicit `encoding` argument
    "PTH123", # `open()` should be replaced by `Path.open()`
    "PTH107", # `os.remove()` should be replaced by `Path.unlink()`
    "N811", # Constant imported as non-constant
    "PLC0415", # Import should be at module level
    "ARG002", # Unused method argument
    "ARG001", # Unused function argument
    "E501", # Line too long
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches in function
    "PERF203", # `try`-`except` within a loop incurs performance overhead
    "PLR1702", # Too many nested blocks
]
"**/scripts/**" = [
    "INP001", # File is part of an implicit namespace package. Add an `__init__.py`
]
"**/tools/**" = [
    "INP001", # File is part of an implicit namespace package. Add an `__init__.py`
]
[tool.ruff.format]
docstring-code-line-length = 80
docstring-code-format = true
indent-style = "space"
line-ending = "auto"
preview = true
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["fragile"]
forced-separate = ["conftest"]
force-single-line = false
order-by-type = false
force-sort-within-sections = true
combine-as-imports = true
lines-after-imports = 2
detect-same-package = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
files = ["src/fragile", "tests"]
exclude = ["docs/conf.py"]
disallow_untyped_defs = false
follow_imports = "normal" # "silent" for not following
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true

[tool.pylint.master]
ignore = 'tests'
load-plugins =' pylint.extensions.docparams'

[tool.pylint.messages_control]
disable = 'all,'
enable = """,
         missing-param-doc,
         differing-param-doc,
         differing-type-doc,
         missing-return-doc,
         """

[tool.pytest.ini_options]
# To disable a specific warning --> action:message:category:module:line
filterwarnings = ["ignore::UserWarning", "ignore::DeprecationWarning"]
addopts = "--ignore=scripts --doctest-continue-on-failure --capture=no"
python_files = ["test_*.py", "tests.py", "test.py"]
log_cli = true
log_cli_level = "INFO"
# Code coverage config
[tool.coverage.run]
branch = true
source = ["src/fragile"]
omit = [
    "version.py",  # automatically created by hatch-vcs, not in repo
]
[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
ignore_errors = true
omit = ["tests/*"]

#####################
# Environment Setup #
#####################

# Default environment with production dependencies
[tool.hatch.envs.default]
installer = "uv"
python = "3.10"
dependencies = []
# Test environment with test-only dependencies
[tool.hatch.envs.test]
description = "Run tests and coverage"
installer = "uv"
extra-dependencies = ["pytest", "pytest-cov", "pytest-xdist"]
[tool.hatch.envs.test.scripts]
run_pytest = "pytest -s -o log_cli=true -o log_cli_level=info {args}"
doctest = "run_pytest --doctest-modules --doctest-glob=\\*.md {args:src}"
test = ["run_pytest {args:tests}"]
cov = "run_pytest -n auto --cov-report=term-missing --cov-config=pyproject.toml --cov=src/fragile --cov=tests {args}"
no-cov = "cov --no-cov {args}"
debug =  "cov --no-cov --pdb --pdbcls=IPython.core.debugger:Pdb {args}"
[tool.hatch.envs.test.env-vars]
N = "auto"
# Docs environment
[tool.hatch.envs.docs]
description = "Build and serve documentation using Jupyter Book and Sphinx"
python = "3.10"
features = ["docs"]
[tool.hatch.envs.docs.env-vars]
SOURCE_DATE_EPOCH = "1580601600"
PYTHONUNBUFFERED = "1"
[tool.hatch.envs.docs.scripts]
features = ["docs"]
build = [
    #"python src/tools/convert_mermaid_blocks.py docs/source --in-place",
    "jupyter-book build docs/",
    "uv pip freeze > docs/requirements.txt",
]
validate = "linkchecker --config .linkcheckerrc --ignore-url=/reference --ignore-url=None site"
build-check = ["build"] #, "validate"]
serve = "python3 -m http.server --directory docs/_build/html {args}"
sphinx = [
    "jupyter-book config sphinx docs/ --overwrite",
    "sphinx-build -b html docs/ docs/_build/html",
    "uv pip freeze > docs/requirements.txt",
]
pdf = [
    "jupyter-book build docs/ --builder pdflatex",
]
docs = ["build", "serve"]
# Lint environment
[tool.hatch.envs.lint]
description = "Run linting checks with ruff and mypy"
template = "lint"  # don't inherit from default!
python = "3.10"
skip-install = true
[tool.hatch.envs.lint.scripts]
typing = [
    "echo \"MYPY VERSION: `mypy --version`\"",
    "mypy --install-types --non-interactive {args}"
]
style = [
    "echo \"RUFF VERSION: `ruff --version`\"",
    "ruff check --fix-only --unsafe-fixes {args:.}", "ruff format {args:.}",
]
check = ["ruff check {args:.}", "ruff format --diff {args:.}"]
all = ["style", "check", "typing"]

# Test matrix for various Python versions replacing the functionality of tox
[[tool.hatch.envs.py-test.matrix]]
template = ["test"]
python = ["39", "310", "311", "312"]
