[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fragile"
description = "FractalAI kungfu"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
# keywords for easier look-up on PyPI
keywords = [] # ToDo: Modify according to your needs!
authors = [
    { name = "Guillem Duran Ballester", email = "guillem@fragile.tech" },
]
maintainers = [
    { name = "Guillem Duran Ballester", email = "guillem@fragile.tech" },
]
# options under https://pypi.org/classifiers/
classifiers = [
        # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: Unix",
        "Operating System :: POSIX",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Topic :: Utilities",
    ]
dynamic = ["version"]
# direct dependencies of this package, installed when users `pip install fragile` later.
dependencies = [
    "flogging",
    "pre-commit",
    "click",
    "torch>=1.13.1,<2.0",
    "numba",
    "numpy<2.0",
    "einops",
    "hydraclick",
    "panel",
    "holoviews",
    "bokeh",
    "pandas",
    "scipy",
    "matplotlib",
    "pydantic",
    "scikit-learn",
    "pip>=24.2",
    "hvplot>=0.11.0",
    "streamz>=0.6.4",
    "jupyter",
    "notebook",
    "e2cnn>=0.2.3",
    "mlflow>=3.8.1",
    "plotly>=6.5.2",
    "torchvision>=0.14.1,<0.15",
    "pytest>=9.0.2",
    "gymnasium[atari]>=1.2.3",
    "plangym[atari]>=0.1.32",
    "scipy-stubs~=1.15.3",
    "pillow>=12.1.0",
    "networkx>=3.4.2",
]
[project.urls]
# important URLs for this project
Documentation = "https://fragile.readthedocs.io/"
Changelog = "https://fragile.readthedocs.io/en/latest/changelog.html"
Tracker = "https://github.com/FragileTech/fragile/issues"
[project.scripts]
fragile = "fragile.__main__:run"

[project.optional-dependencies]
lint= ["mypy", "ruff", "mypy"]
test = ["pytest", "pytest-cov", "pytest-xdist", "tomli>=2.0.2"]
docs = [
    "autoapi",
    "jupyter-book>=1.0.0,<2.0.0",
    "sphinx",
    "linkify-it-py",
    "myst-parser",
    "myst-nb",
    "ruyaml",
    "sphinx-autoapi",
    "pydata-sphinx-theme",
    "sphinx-autodoc2",
    "sphinxcontrib-mermaid",
    "sphinx_book_theme",
    "sphinx_rtd_theme",
    "jupyter-cache",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinxext-opengraph",
    "sphinxcontrib-bibtex",
    "sphinx-tippy",
    "sphinx-proof",
]
[tool.hatch.metadata]
# direct dependency references, e.g `pip @ git+https://github.com/pypa/pip.git@master`
allow-direct-references = true

[tool.hatch.version]
path = "src/fragile/version.py"

[tool.hatch.build]
packages = ["src/fragile"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]

[tool.ruff]
# Assume Python 3.10
target-version = "py310"

preview = true
include = ["*.py", "*.pyi", "**/pyproject.toml"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".idea",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "output",
    "venv",
    "experimental",
    ".pytest_cache",
    "**/.ipynb_checkpoints/**",
    "**/proto/**",
    "data",
    "config",
    "docs/conf.py",  # Autogenerated by jupyter-book
]
# Same as Black.
line-length = 99
[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    "ARG", "C4", "E", "EM", "F", "FBT",
    "FLY", "FIX", "FURB", "N", "NPY",
    "INP", "ISC", "PERF", "PIE", "PL",
    "PTH", "RET", "RUF", "S", "T10",
    "TD", "T20", "UP", "YTT", "W", "I",
]
ignore = [
    "D100", "D211", "D213", "D104", "D203", "D301", "D407", "S101",
    "FBT001", "FBT002", "FIX002", "ISC001", "PLR0913", "RUF012", "TD003",
    "PTH123", "PLR6301", "PLR0917", "S311", "S403", "PLR0914", "PLR0915", "S608",
    "EM102", "PTH111", "FIX004", "UP035", "PLW2901", "S318", "S404",
    "S408", 'S405', 'S607', 'S603',
    'E902', "TD001", "TD002", "FIX001", "T201", "PLW3201",
    "RUF001", "RUF002", "RUF003",  # Allow Greek/unicode in strings, docstrings, comments
    "N806",  # Allow uppercase variable names (physics notation: T, G, B, etc.)
    "N816",  # Allow mixedCase in global scope (physics notation: eps_F, k_B, etc.)
    "N803",  # Allow uppercase argument names (physics notation: G, T, B, etc.)
    "N802",  # Allow uppercase function names (physics notation)
    "N815",  # Allow mixedCase in class scope (physics notation: k_B_T, etc.)
    "N801",  # Allow non-CapWords class names (custom sphinx nodes, etc.)
    "N812",  # Allow lowercase imported as non-lowercase (physics constants)
    "PERF203",  # Allow try-except in loops (acceptable for validation code)
    "PLR2004",  # Allow magic values in comparisons (physics constants, tests)
    "ARG001", "ARG002", "ARG004",  # Allow unused arguments (interface conformance)
    "NPY002",  # Allow legacy numpy.random (existing codebase)
    "PLR0912",  # Allow many branches (complex physics logic)
    "FBT003",  # Allow boolean positional values
    "PLC0415",  # Allow imports not at top (conditional imports)
    "E402",  # Allow module imports not at top
    "PERF401",  # Allow manual list construction
    "PTH118", "PTH110", "PTH119", "PTH120", "PTH103", "PTH122", "PTH112",  # Allow os.path usage
    "PLR1702",  # Allow many nested blocks
    "PLC2701",  # Allow private imports
    "INP001",  # Allow implicit namespace packages
    "S110", "S112", "S108",  # Allow try-except-pass patterns
    "E741",  # Allow ambiguous variable names (l, O, I - common in math)
    "PLR0911",  # Allow many return statements
    "PLR0904",  # Allow many public methods
    "PLC2401", "PLC0206",  # Allow non-ASCII identifiers
    "ISC003",  # Allow implicit string concat
    "FURB113", "FURB101", "FURB103",  # Allow open/read/write patterns
    "RUF100",  # Allow unused noqa directives (transitional)
    "E501",  # Allow long lines (physics formulas, etc.)
    "S301",  # Allow pickle (trusted data)
    "PLR6104",  # Allow non-augmented assignment
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# unfixable = ["I"]

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"
scipy = "sp"
holoviews = "hv"
panel = "pn"
polars = "pl"
"polars.selectors" = "cs"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"cli.py" = ["PLC0415", "D205", "D400", "D415"]
"**/docs/**" = ["INP001", "PTH100"]
"**/{tests,docs}/*" = [
    "E402", "F401", "F811", "D", "S101", "PLR2004", "S105",
    "PLW1514", "PTH123", "PTH107", "N811", "PLC0415", "ARG002",
]
# Enable reformatting of code snippets in docstrings.
[tool.ruff.format]
docstring-code-line-length = 99
docstring-code-format = true
indent-style = "space"
line-ending = "auto"
preview = true
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["fragile"]
forced-separate = ["conftest"]
force-single-line = false
order-by-type = false
force-sort-within-sections = true
combine-as-imports = true
lines-after-imports = 2
detect-same-package = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
files = ["src/fragile", "tests"]
exclude = ["docs/conf.py"]
disallow_untyped_defs = false
follow_imports = "normal" # "silent" for not following
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true

[tool.pylint.master]
ignore = 'tests'
load-plugins =' pylint.extensions.docparams'

[tool.pylint.messages_control]
disable = 'all,'
enable = """,
         missing-param-doc,
         differing-param-doc,
         differing-type-doc,
         missing-return-doc,
         """

[tool.pytest.ini_options]
# To disable a specific warning --> action:message:category:module:line
filterwarnings = ["ignore::UserWarning", 'ignore::DeprecationWarning']
addopts = "--ignore=scripts --doctest-continue-on-failure"
python_files = ["test_*.py", "tests.py", "test.py"]
testpaths = ["tests"]
# Code coverage config
[tool.coverage.run]
branch = true
source = ["src/fragile"]
omit = [
    "version.py",  # automatically created by hatch-vcs, not in repo
]
[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
ignore_errors = true
omit = ["tests/*"]

#####################
# Environment Setup #
#####################

# Default environment with production dependencies
[tool.hatch.envs.default]
installer = "uv"
python = "3.10"
post-install-commands = ["pre-commit install"]
dependencies = []
# Test environment with test-only dependencies
[tool.hatch.envs.test]
description = "Run tests and coverage"
features = ["test"]
[tool.hatch.envs.test.scripts]
run_pytest = "pytest -s -o log_cli=true -o log_cli_level=info {args}"
doctest = "run_pytest --doctest-modules --doctest-glob=\\*.md -n 0 {args:src}"
test = ["doctest", "run_pytest {args:tests}"]
cov = "run_pytest -n auto --cov-report=term-missing --cov-config=pyproject.toml --cov=src/fragile --cov=tests {args}"
no-cov = "cov --no-cov {args}"
debug =  "cov --no-cov --pdb --pdbcls=IPython.core.debugger:Pdb {args}"
[tool.hatch.envs.test.env-vars]
N = "auto"
# Docs environment
[tool.hatch.envs.docs]
description = "Build and serve documentation using Jupyter Book and Sphinx"
features = ["docs"]
[tool.hatch.envs.docs.env-vars]
SOURCE_DATE_EPOCH = "1580601600"
PYTHONUNBUFFERED = "1"
[tool.hatch.envs.docs.scripts]
features = ["docs"]
build = [
    "make prompt",
    "cp AUTHORS.md docs/source/project/",
    "cp CHANGELOG.md docs/source/project/",
    "cp CONTRIBUTING.md docs/source/project/",
    "cp README.md docs/source/project/",
    "jupyter-book build docs/",
]
validate = "linkchecker --config .linkcheckerrc --ignore-url=/reference --ignore-url=None site"
build-check = ["build"] #, "validate"]
serve = "python3 -m http.server --directory docs/_build/html {args}"
sphinx = [
    "jupyter-book config sphinx docs/ --overwrite",
    "sphinx-build -b html docs/ docs/_build/html",
]
docs = ["build", "serve"]
# Lint environment
[tool.hatch.envs.lint]
description = "Run linting checks with ruff and mypi"
template = "lint"  # don't inherit from default!
features = ["lint"]
skip-install = true
[tool.hatch.envs.lint.scripts]
typing = [
    "echo \"MYPY VERSION: `mypy --version`\"",
    "mypy --install-types --non-interactive {args}"
]
style = [
    "echo \"RUFF VERSION: `ruff --version`\"",
    "ruff check --fix-only --unsafe-fixes {args:.}", "ruff format {args:.}",
]
check = ["ruff check {args:.}", "ruff format --diff {args:.}"]
all = ["style", "check"]

# Test matrix for various Python versions replacing the functionality of tox
[[tool.hatch.envs.py-test.matrix]]
template = ["test"]
python = ["39", "310", "311", "312"]
